--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ShellView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ShellView.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         Title="ShellView" Height="450" Width="800">
 
-    <Window.Resources>
+    <!--<Window.Resources>
 
         <sys:Double x:Key="MyButtonHeight">48</sys:Double>
         
@@ -29,7 +29,7 @@
             <Setter Property="Margin" Value="5" />
         </Style>
 
-        <!-- Ustawia wszystkie kontrolki typu Button na domyślny styl -->
+        --><!-- Ustawia wszystkie kontrolki typu Button na domyślny styl --><!--
         <Style TargetType="Button" BasedOn="{StaticResource DefaultButtonStyle}" />
 
         <Style x:Key="SettingsButtonStyle" TargetType="Button" BasedOn="{StaticResource DefaultButtonStyle}">
@@ -51,10 +51,9 @@
             <Setter Property="Width" Value="100" />
         </Style>
 
-    </Window.Resources>
+    </Window.Resources>-->
 
     <Grid>
-
 
         <DockPanel>
 
@@ -106,11 +105,9 @@
                     <Button Style="{StaticResource DangerousMenuBarButtonStyle}">About</Button>
                 </StackPanel>
             </Grid>
-            
-            
-            <Border Background="White" />
 
-            
+
+            <Frame Source="HomeView.xaml" />
 
 
         </DockPanel>
