--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/App.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/App.xaml
@@ -2,50 +2,11 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Vavatech.Shop.WpfClient"
-             xmlns:sys="clr-namespace:System;assembly=mscorlib"
+            
              StartupUri="Views/ShellView.xaml">
     <Application.Resources>
 
-        <sys:Double x:Key="MyButtonHeight">48</sys:Double>
-
-        <Color x:Key="MyBlue">#052767</Color>
-        <Color x:Key="MyPurple">#3a0647</Color>
-
-        <SolidColorBrush x:Key="MyBlueBrush" Color="{StaticResource MyBlue}" />
-
-        <LinearGradientBrush x:Key="MyGradientBrush">
-            <GradientStop Color="{StaticResource MyBlue}" />
-            <GradientStop Color="{StaticResource MyPurple}" Offset="1" />
-        </LinearGradientBrush>
-
-        <Style x:Key="DefaultButtonStyle" TargetType="Button">
-            <Setter Property="Height" Value="48" />
-            <Setter Property="Background" Value="Transparent" />
-            <Setter Property="Foreground" Value="White" />
-            <Setter Property="Margin" Value="5" />
-        </Style>
-
-        <!-- Ustawia wszystkie kontrolki typu Button na domyślny styl -->
-        <Style TargetType="Button" BasedOn="{StaticResource DefaultButtonStyle}" />
-
-        <Style x:Key="SettingsButtonStyle" TargetType="Button" BasedOn="{StaticResource DefaultButtonStyle}">
-            <Setter Property="Height" Value="48" />
-            <Setter Property="Background" Value="DarkSeaGreen" />
-            <Setter Property="Foreground" Value="White" />
-            <Setter Property="Margin" Value="5" />
-        </Style>
-
-
-        <Style x:Key="MenuBarButtonStyle" TargetType="Button">
-            <Setter Property="Width" Value="100" />
-            <Setter Property="Margin" Value="5" />
-        </Style>
-
-        <Style x:Key="DangerousMenuBarButtonStyle" TargetType="Button" BasedOn="{StaticResource MenuBarButtonStyle}">
-            <Setter Property="Background" Value="Red" />
-            <Setter Property="Foreground" Value="White" />
-            <Setter Property="Width" Value="100" />
-        </Style>
+        <ResourceDictionary Source="Resources/Styles.xaml" />
 
     </Application.Resources>
 </Application>
