Utworzenie widoku klientów

--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ShellView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ShellView.xaml
@@ -107,7 +107,7 @@
             </Grid>
 
 
-            <Frame Source="HomeView.xaml" />
+            <Frame Source="CustomersView.xaml" />
 
 
         </DockPanel>
