--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/CustomersView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/CustomersView.xaml
@@ -4,9 +4,14 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Vavatech.Shop.WpfClient.Views"
+      xmlns:vm="clr-namespace:Vavatech.Shop.ViewModels;assembly=Vavatech.Shop.ViewModels"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="450" d:DesignWidth="800"      
       Title="CustomersView">
+
+    <Page.DataContext>
+        <vm:CustomersViewModel />
+    </Page.DataContext>
 
     <Grid>
 
@@ -16,10 +21,8 @@
         </Grid.ColumnDefinitions>
 
         <!-- Customers -->
-        <ListBox>
-            <ListBoxItem>Customer 1</ListBoxItem>
-            <ListBoxItem>Customer 2</ListBoxItem>
-            <ListBoxItem>Customer 3</ListBoxItem>
+        <ListBox ItemsSource="{Binding Path=Customers}">
+          
         </ListBox>
 
         <!-- Selected customer -->
