--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/App.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/App.xaml
@@ -4,9 +4,17 @@
              xmlns:local="clr-namespace:Vavatech.Shop.WpfClient"
             
              StartupUri="Views/ShellView.xaml">
+    
     <Application.Resources>
 
-        <ResourceDictionary Source="Resources/Styles.xaml" />
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/Styles.xaml" />
+                <ResourceDictionary Source="Resources/DataTemplates.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+
+      
 
     </Application.Resources>
 </Application>
