--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Resources/Styles.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Resources/Styles.xaml
@@ -44,5 +44,10 @@
         <Setter Property="Foreground" Value="White" />
         <Setter Property="Width" Value="100" />
     </Style>
+
+    <Style x:Key="TextBlockStyle" TargetType="TextBlock"   >
+        <Setter Property="Width" Value="100" />
+        <Setter Property="Margin" Value="5" />
+    </Style>
     
 </ResourceDictionary>
