--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/App.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/App.xaml
@@ -8,6 +8,9 @@
     <Application.Resources>
 
         <ResourceDictionary>
+
+            <local:ViewModelLocator x:Key="ViewModelLocator" />
+
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles.xaml" />
                 <ResourceDictionary Source="Resources/DataTemplates.xaml" />
