--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ShellView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ShellView.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:local="clr-namespace:Vavatech.Shop.WpfClient.Views"
+        DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=ShellViewModel}"
         mc:Ignorable="d"
         Title="ShellView" Height="450" Width="800">
 
