--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ShellView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ShellView.xaml
@@ -108,7 +108,7 @@
             </Grid>
 
 
-            <Frame Source="CustomersView.xaml" />
+            <Frame Source="CounterView.xaml" />
 
 
         </DockPanel>
