--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Resources/DataTemplates.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Resources/DataTemplates.xaml
@@ -9,9 +9,9 @@
         <Border BorderBrush="LightGray" BorderThickness="1">
             <StackPanel Orientation="Horizontal">
 
-                <Image Width="100" Source="{Binding Avatar}" />
+                <Image Margin="5" Width="100" Source="{Binding Avatar}" />
 
-                <TextBlock Style="{StaticResource TextBlockStyle}">
+                <TextBlock  Style="{StaticResource TextBlockStyle}">
                     <TextBlock.Text>
                         <MultiBinding StringFormat="{} {0} {1}">
                             <Binding Path="FirstName" />
@@ -27,6 +27,36 @@
 
             </StackPanel>
         </Border>
+    </DataTemplate>
+
+    <DataTemplate x:Key="ProductTemplate" DataType="{x:Type m:Product}" >
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="50" />
+            </Grid.ColumnDefinitions>
+
+
+            <Image Margin="5" Width="150" Grid.Column="0" Source="{Binding ImageUrl}" />
+
+            <StackPanel Grid.Column="1" >
+                <TextBlock 
+                       FontWeight="Bold"
+                       FontSize="20"
+                       Text="{Binding Name}" />
+
+                <TextBlock FontSize="20"  Text="{Binding UnitPrice}" />
+            </StackPanel>
+            
+
+            <Border Grid.Column="2" Background="{Binding Color}" />
+        </Grid>
+
+        
+        
+        
+
     </DataTemplate>
 
 
