--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ProductsView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ProductsView.xaml
@@ -3,12 +3,17 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Vavatech.Shop.WpfClient.Views"
+      xmlns:local="clr-namespace:Vavatech.Shop.WpfClient.Views" 
+      xmlns:c="clr-namespace:Vavatech.Shop.WpfClient.Converters"
       DataContext="{Binding Source={StaticResource ViewModelLocator}, Path=ProductsViewModel}"
       mc:Ignorable="d" 
       x:Name="Products"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ProductsView">
+
+    <Page.Resources>
+        <c:NegativeConverter x:Key="NegativeConverter" />
+    </Page.Resources>
 
     <Grid>
 
@@ -47,7 +52,8 @@
 
             <DockPanel>
                 <CheckBox x:Name="IsDiscountCheckBox" IsChecked="{Binding IsDiscount}" />
-                <TextBox Text="{Binding Discount}" IsReadOnly="{Binding ElementName=IsDiscountCheckBox, Path=IsChecked}" />
+                <TextBox Text="{Binding Discount}" 
+                         IsReadOnly="{Binding ElementName=IsDiscountCheckBox, Path=IsChecked, Converter={StaticResource NegativeConverter }}" />
             </DockPanel>
             
         </StackPanel>
