--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ShellView.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Views/ShellView.xaml
@@ -105,7 +105,7 @@
                 <Button Command="{Binding ShowViewCommand}" CommandParameter="Customer">Customer</Button>
                 <Button Command="{Binding ShowViewCommand}" CommandParameter="Products" >Products</Button>
                 <Button>Orders</Button>
-                <Button Style="{StaticResource SettingsButtonStyle}">Settings</Button>
+                <Button Command="{Binding ShowViewCommand}" CommandParameter="Settings"  Style="{StaticResource SettingsButtonStyle}">Settings</Button>
                 
 
             </StackPanel>
