--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Resources/DataTemplates.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/Resources/DataTemplates.xaml
@@ -42,7 +42,9 @@
             </Grid.ColumnDefinitions>
 
 
-            <Image Margin="5" Width="150" Grid.Column="0" Source="{Binding ImageUrl}" />
+            <Image 
+                
+                Margin="5" Width="150" Grid.Column="0" Source="{Binding ImageUrl}" />
 
             <StackPanel Grid.Column="1" >
                 <TextBlock 
