--- a/src/Vavatech.Shop/Vavatech.Shop.WpfClient/App.xaml
+++ b/src/Vavatech.Shop/Vavatech.Shop.WpfClient/App.xaml
@@ -12,6 +12,7 @@
             <local:ViewModelLocator x:Key="ViewModelLocator" />
 
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/Images.xaml" />
                 <ResourceDictionary Source="Resources/Styles.xaml" />
                 <ResourceDictionary Source="Resources/DataTemplates.xaml" />
             </ResourceDictionary.MergedDictionaries>
